--- a/DL_Assignment.ipynb
+++ b/DL_Assignment.ipynb
@@ -1028,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1043,16 +1043,13 @@
     }
    ],
    "source": [
-    "import keras_tuner as kt # type: ignore\n",
-    "\n",
-    "TIME_STEP = 3\n",
+    "import keras_tuner as kt \n",
     "\n",
     "def build_model(hp):\n",
     "    model = keras.Sequential()\n",
     "\n",
     "\n",
-    "    # Adding LSTM layers\n",
-    "    for i in range(4):  # 3 LSTM layers\n",
+    "    for i in range(4): \n",
     "        model.add(layers.LSTM(\n",
     "            units=hp.Int(f'units_{i}', min_value=32, max_value=128, step=32),\n",
     "            input_shape=(train_feature_seq.shape[1], train_feature_seq.shape[2]) if i == 0 else None,\n",
@@ -1060,11 +1057,8 @@
     "            return_sequences=i < 3,\n",
     "        ))\n",
     "\n",
-    "    # Output layer\n",
     "    model.add(layers.Dropout(rate=0.2))\n",
     "    model.add(layers.Dense(1))\n",
-    "\n",
-    "    # Tuning learning rate\n",
     "\n",
     "    model.compile(\n",
     "        optimizer='adam',\n",
@@ -1089,7 +1083,6 @@
     "    monitor='val_mae'\n",
     ")\n",
     "\n",
-    "# Hyperparameter search\n",
     "tuner.search(\n",
     "    train_feature_seq, train_target_seq,\n",
     "    epochs=100,\n",
@@ -1099,7 +1092,6 @@
     "    verbose=0\n",
     ")\n",
     "\n",
-    "# Get best model\n",
     "best_hps = tuner.get_best_hyperparameters(num_trials=1)[0]"
    ]
   },
