--- a/DL_Assignment.ipynb
+++ b/DL_Assignment.ipynb
@@ -41,7 +41,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def split_train_validate_test(df: DataFrame, train_percent=.6, validate_percent=.2, test_percent=.2):\n",
     "    df.sort_values(by=\"Date\", inplace=True) \n",
     "    m = len(df)\n",
@@ -59,7 +58,6 @@
     "    df[\"Date\"] = pd.to_datetime(df[\"Date\"], format=\"%d/%m/%Y\")\n",
     "    df.sort_values(by=\"Date\", inplace=True)\n",
     "    return df\n",
-    "\n",
     "\n",
     "def plot_gbp_usd(data):\n",
     "    plt.figure(figsize=(14, 7))\n",
@@ -407,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -459,8 +457,7 @@
     "plot_train_val_evaluation_history(train_mae, validate_mae, \"MAE\")\n",
     "plot_train_val_evaluation_history(train_mse, validate_mse, \"MSE\")\n",
     "\n",
-    "dnn_base_metric = print_evaluation_metrics(test[[target]], y_pred)\n",
-    "            \n"
+    "dnn_base_metric = print_evaluation_metrics(test[[target]], y_pred)"
    ]
   },
   {
@@ -1077,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1390,6 +1387,7 @@
     "    epochs=100,\n",
     "    batch_size=16,\n",
     "    validation_data=(validation_feature_seq, validation_target_seq),\n",
+    "    verbose=0\n",
     ")"
    ]
   },
@@ -1914,6 +1912,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.5 Plot the actual, predicted value"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 267,
    "metadata": {},
@@ -2392,6 +2397,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6.5 Plot the actual, predicted value"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 273,
    "metadata": {},
@@ -2428,14 +2440,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/xz/1gn0m18n5k1bjmbt205k50cm0000gn/T/ipykernel_7349/3625100056.py:9: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "/var/folders/xz/1gn0m18n5k1bjmbt205k50cm0000gn/T/ipykernel_7349/2461053800.py:9: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  df = pd.concat([df, pd.DataFrame([{\n"
      ]
     },
@@ -2494,7 +2506,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>LSTM metric</td>\n",
+       "      <td>LSTM hyper-tuned model</td>\n",
        "      <td>0.02042</td>\n",
        "      <td>0.00073</td>\n",
        "      <td>0.85046</td>\n",
@@ -2518,7 +2530,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>Ensemble base metric</td>\n",
+       "      <td>Ensemble base model</td>\n",
        "      <td>0.02531</td>\n",
        "      <td>0.00093</td>\n",
        "      <td>0.80902</td>\n",
@@ -2541,20 +2553,20 @@
        "0              DNN base model  0.01247  0.00071   0.85826  12.59929\n",
        "1       DNN Hyper-tuned model  0.01864  0.00081   0.83818  13.27359\n",
        "2             LSTM base model  0.02665  0.00101   0.79310  12.41527\n",
-       "3                 LSTM metric  0.02042  0.00073   0.85046  12.88525\n",
+       "3      LSTM hyper-tuned model  0.02042  0.00073   0.85046  12.88525\n",
        "4              RNN base model  0.01565  0.00045   0.90808  12.38192\n",
        "5       RNN Hyper-tuned model  0.01380  0.00037   0.92376  12.33868\n",
-       "6        Ensemble base metric  0.02531  0.00093   0.80902  12.13995\n",
+       "6         Ensemble base model  0.02531  0.00093   0.80902  12.13995\n",
        "7  Ensemble Hyper-tuned model  0.01482  0.00040   0.91867  12.35912"
       ]
      },
-     "execution_count": 274,
+     "execution_count": 278,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "metrics = [[dnn_base_metric, \"DNN base model\"], [dnn_metric, \"DNN Hyper-tuned model\" ],[base_lstm_metric, \"LSTM base model\"], [lstm_metric, \"LSTM metric\" ],[rnn_base_metric, \"RNN base model\"], [rnn_metric, \"RNN Hyper-tuned model\"], [cl_base_metric, \"Ensemble base metric\"], [lc_metric, \"Ensemble Hyper-tuned model\"]]  \n",
+    "metrics = [[dnn_base_metric, \"DNN base model\"], [dnn_metric, \"DNN Hyper-tuned model\" ],[base_lstm_metric, \"LSTM base model\"], [lstm_metric, \"LSTM hyper-tuned model\" ],[rnn_base_metric, \"RNN base model\"], [rnn_metric, \"RNN Hyper-tuned model\"], [cl_base_metric, \"Ensemble base model\"], [lc_metric, \"Ensemble Hyper-tuned model\"]]  \n",
     "\n",
     "df = pd.DataFrame()\n",
     "# Initialize the DataFrame with appropriate columns\n",
@@ -2570,13 +2582,14 @@
     "\t\t'MAPE': round(m[0]['MAPE'], 5)\n",
     "\t}])], ignore_index=True)\n",
     "\n",
+    "df.reset_index(drop=True, inplace=True)\n",
     "df\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2591,8 +2604,6 @@
     }
    ],
    "source": [
-    "dnn_features = ['Trend', 'Seasonality', 'Noise', 'Week', 'Month', 'Day', 'Open']\n",
-    "\n",
     "plot_gbp_usd([\n",
     "\t[test['Date'], u_test['Open'], \"GBPUSD Actual\"],\n",
     "\t[test['Date'], dnn_predicted, \"GPBUSD DNN Predicted\"],\n",
